--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button-animate {
+    transition: width 0.3s ease;
+}
+.button-animate:hover {
+    width: 40%;
+}
